# TM_Ex_C_2023

./: CMakeLists.txt  README.md  VanpellicomGilles_6.17.c
Cursus/: VanpellicomGilles_8.4.c
Cursus/Ex_4/: VanpellicomGilles_4_10.c
Cursus/Ex_5/: VanpellicomGilles_5.2.13.c  VanpellicomGilles_5.3.16.c
Cursus/Ex_6/: VanpellicomGilles_6.17.c
Misc/: DynamicArray.c  Enums.c  HogerLager.c
src/Ex_04/: VanpellicomGilles_4_17.c
src/Ex_05/: VanpellicomGilles_5.3.13.c
src/Ex_07/: VanpellicomGilles_7.11.c  VanpellicomGilles_7_2.c
src/Ex_08/: VanpellicomGilles_8.4.c  VanpellicomGilles_8.6.c  VanpellicomGilles_8.7.c
src/Ex_09/: VanpellicomGilles_9.7.c
src/Ex_10/: VanpellicomGilles_10.4.c
src/Ex_11/: VanpellicomGilles_11.1.c  VanpellicomGilles_11.6.c  VanpellicomGilles_11.8.c  VanpellicomGilles_11.9.c
src/Ex_12/: VanpellicomGilles_12.1.c  VanpellicomGilles_12.3.c  VanpellicomGilles_12.4.c  VanpellicomGilles_12.5.c
src/Ex_14/: Text.txt  VanpellicomGilles_14.11.c  VanpellicomGilles_14.14.c
src/Ex_15/: VanpellicomGilles_15.5.c  VanpellicomGilles_15.6.c
src/Ex_16/: VanpellicomGilles16.3.c  ages.txt
src/Ex_17/: VanpellicomGIlles_17.3.c
src/Ex_4/: VanpellicomGilles_4_17.c
src/Ex_6/: VanpellicomGilles_6.12.c
src/Ex_7/: VanpellicomGilles_7.11.c  VanpellicomGilles_7_2.c
src/Ex_8/: VanpellicomGilles_8.4.c
