cmake_minimum_required(VERSION 3.22)
project(Oefeningen C)

set(CMAKE_C_STANDARD 11)

add_executable(Cursus/Ex_4/VanpellicomGilles_4_17.c)
add_executable(VanpellicomGilles_5.2.13 Cursus/Ex_5/VanpellicomGilles_5.2.13.c)
add_executable(VanpellicomGilles_5.3.13 Cursus/Ex_5/VanpellicomGilles_5.3.13.c)
add_executable(VanpellicomGilles_5.3.16 Cursus/Ex_5/VanpellicomGilles_5.3.16.c)
add_executable(VanpellicomGilles_6.17 Cursus/Ex_6/VanpellicomGilles_6.17.c)
add_executable(VanpellicomGilles_7_2 Cursus/Ex_7/VanpellicomGilles_7_2.c)
add_executable(VanpellicomGilles_6.12 Cursus/Ex_6/VanpellicomGilles_6.12.c)
add_executable(Cursus/Ex_4/VanpellicomGilles_4_10.c)
add_executable(VanpellicomGilles_7.11 Cursus/Ex_7/VanpellicomGilles_7.11.c)
add_executable(VanpellicomGilles_8.4 Cursus/Ex_8/VanpellicomGilles_8.4.c)