cmake_minimum_required(VERSION 3.22)
project(Oefeningen C)

set(CMAKE_C_STANDARD 11)

add_executable(VanpellicomGilles_4_17.c src/Ex_4/VanpellicomGilles_4_17.c)
add_executable(VanpellicomGilles_5.2.13 src/Ex_5/VanpellicomGilles_5.2.13.c)
add_executable(VanpellicomGilles_5.3.13 src/Ex_5/VanpellicomGilles_5.3.13.c)
add_executable(VanpellicomGilles_5.3.16 src/Ex_5/VanpellicomGilles_5.3.16.c)
add_executable(VanpellicomGilles_6.17 src/Ex_6/VanpellicomGilles_6.17.c)
add_executable(VanpellicomGilles_7_2 src/Ex_7/VanpellicomGilles_7_2.c)
add_executable(VanpellicomGilles_6.12 src/Ex_6/VanpellicomGilles_6.12.c)
add_executable(VanpellicomGilles_4_10 src/Ex_4/VanpellicomGilles_4_10.c)
add_executable(VanpellicomGilles_7.11 src/Ex_7/VanpellicomGilles_7.11.c)
add_executable(VanpellicomGilles_8.4 src/Ex_8/VanpellicomGilles_8.4.c)