cmake_minimum_required(VERSION 3.22)
project(Oefeningen C)

set(CMAKE_C_STANDARD 11)

add_executable(VanpellicomGilles_4_17.c src/Ex_04/VanpellicomGilles_4_17.c)
add_executable(VanpellicomGilles_5.2.13 src/Ex_05/VanpellicomGilles_5.2.13.c)
add_executable(VanpellicomGilles_5.3.13 src/Ex_05/VanpellicomGilles_5.3.13.c)
add_executable(VanpellicomGilles_5.3.16 src/Ex_05/VanpellicomGilles_5.3.16.c)
add_executable(VanpellicomGilles_6.17 src/Ex_06/VanpellicomGilles_6.17.c)
add_executable(VanpellicomGilles_7_2 src/Ex_07/VanpellicomGilles_7_2.c)
add_executable(VanpellicomGilles_6.12 src/Ex_06/VanpellicomGilles_6.12.c)
add_executable(VanpellicomGilles_4_10 src/Ex_04/VanpellicomGilles_4_10.c)
add_executable(VanpellicomGilles_7.11 src/Ex_07/VanpellicomGilles_7.11.c)
add_executable(VanpellicomGilles_8.4 src/Ex_08/VanpellicomGilles_8.4.c)
add_executable(VanpellicomGilles_9.7 src/Ex_09/VanpellicomGilles_9.7.c)
add_executable(VanpellicomGilles_10.4 src/Ex_10/VanpellicomGilles_10.4.c)
add_executable(VanpellicomGilles_11.1 src/Ex_11/VanpellicomGilles_11.1.c)
add_executable(VanpellicomGilles_11.9 src/Ex_11/VanpellicomGilles_11.9.c)
add_executable(VanpellicomGilles_12.1 src/Ex_12/VanpellicomGilles_12.1.c)
add_executable(VanpellicomGilles_12.3 src/Ex_12/VanpellicomGilles_12.3.c)